# elo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  Taskfile.yml  docker-compose.yml
scripts/: README.md  load_k6.js  load_k6_mixed.js  load_k6_profile.js  load_vegeta.sh  run_k6_restart.sh  run_k6_warm_cold.sh  run_smoke.sh  simulate_lifecycle.py  test_api.py
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: basic.py  orm_models.py
sdk/python/src/elo/: __init__.py  client.py  exceptions.py  models.py  orm.py  session.py  types.py
sdk/python/tests/: test_client_smoke.py  test_geo_nearby.py  test_geo_recommendations.py  test_lifecycle_simulation.py
src/: main.rs
tests/: encoding_api.rs  geo_recommendations.rs  lifecycle_simulation.rs  nearby_geohash.rs
