[project]
name = "elo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "willian santos", email = "will.ro.santos@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
markers = ["integration: integration tests that require the API server"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
